# AgentDisk

./: .env.example  .gitignore  .gitlab-ci.yml  .golangci.yml  CLAUDE.md  Makefile  README.md  config.yaml  go.mod  go.sum  main.go  plan.md  prd.md
.claude/commands/: dev.md  sync-docs.md  viz.md
.claude/skills/sdk-publish/: SKILL.md
config/: config.go  config_test.go
docker/: Dockerfile  Dockerfile.nginx  docker-compose.yaml  nginx.conf
docs/: agent_integration_guide.md  auth_integration_guide.md  manual_test_plan.md  openapi.yaml  public-directory-architecture.md
docs/site/: index.md  package-lock.json  package.json
docs/site/.vitepress/: config.ts
docs/site/api/: admin.md  files.md  folders.md  index.md  overview.md  permissions.md  preview.md  recycle.md  shares.md  space.md  tags.md  versions.md
docs/site/guide/: admin-panel.md  (+11 more)
gateway/: package-lock.json  package.json  tsconfig.json
gateway/src/: index.ts
internal/handler/: admin.go  admin_mfa.go  admin_mfa_test.go  api_key.go  auth.go  auth_test.go  file.go  file_download_test.go  folder.go  folder_test.go  oauth2_config.go  permission.go  permission_test.go  preview.go  public_directory.go  recycle.go  share.go  share_test.go  space.go  space_test.go  tag.go  version.go
internal/middleware/: admin_auth.go  auth.go  auth_hybrid.go  auth_hybrid_test.go  auth_test.go  cors.go  cors_test.go  logger.go
internal/model/: admin.go  admin_passkey.go  api_key.go  file.go  file_version.go  folder.go  oauth2_config.go  permission.go  public_directory.go  recycle_bin.go  share.go  tag.go  user_disk.go
internal/repository/: admin.go  admin_passkey.go  api_key.go  db.go  file.go  folder.go  oauth2_config.go  permission.go  public_directory.go  recycle.go  share.go  space.go  tag.go  version.go
internal/router/: router.go
internal/service/: admin.go  admin_mfa.go  admin_mfa_test.go  admin_test.go  api_key.go  api_key_test.go  file.go  folder.go  glob.go  glob_test.go  oauth2_config.go  permission.go  permission_test.go  preview.go  preview_test.go  public_directory.go  public_directory_test.go  recycle.go  share.go  share_test.go  space.go  tag.go  version.go
internal/store/: webauthn_session.go  webauthn_session_test.go
pkg/download_token/: download_token.go  download_token_test.go
pkg/jwt/: jwt.go  jwt_test.go
pkg/oauth2client/: client.go  client_test.go
pkg/oss/: client.go
pkg/response/: response.go  response_test.go
pkg/storage/: local.go  local_handler.go  local_test.go  minio.go  storage.go
scripts/: dev.sh  run_all_tests.sh  test_agent_auth.sh  test_agent_chat.sh  test_auth.sh
scripts/add_admin/: main.go
scripts/clean_admin/: main.go
scripts/gen_dl_token/: main.go
scripts/gen_token/: main.go
scripts/mock_oauth_server/: main.go
sdk/: .gitignore  LICENSE  README.md  pyproject.toml
sdk/agentdisk/: __init__.py  _resolver.py  async_client.py  client.py  config.py  exceptions.py
sdk/agentdisk/api/: __init__.py  base.py  file.py  folder.py  permission.py  preview.py  public_directory.py  recycle.py  share.py  space.py  tag.py  version.py
sdk/agentdisk/models/: __init__.py  folder.py  permission.py  preview.py  share.py  space.py  tag.py  version.py
sdk/src/agentdisk/: __init__.py  config.py
sdk/src/agentdisk/api/: base.py  folder.py  permission.py  preview.py  share.py  space.py
sdk/src/agentdisk/models/: __init__.py  file.py  public_directory.py  recycle.py
sdk/tests/: conftest.py  test_async.py  test_file.py  test_folder.py  test_permission.py  test_preview.py  test_public_directory.py  test_recycle.py  test_resolver.py  test_share.py  test_space.py  test_tag.py  test_version.py
sql/: schema.sql
test/browser/: package.json  report.md  runner.js
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
(+131 files in other folders)
