[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdisk"
version = "0.1.0"
description = "Python SDK for AgentDisk API (gateway mode)"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["agentdisk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
