[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdisk"
version = "0.1.0"
description = "Python SDK for AgentDisk API (gateway mode)"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentdisk"]

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["agentdisk", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["agentdisk"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
